Update functions_v7.sh